kubernetes/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  type: NodePort
  selector:
    app: django
  ports:
  - port: 80
    targetPort: 80
